@@ -3,6 +3,8 @@ Changes in @NEW@:
     * PGP keys having some self signatures that fail to pass are
       no longer failing, as long as at least one self signature passes.
       (CNY-2439)
+    * The client enforces the trust model using the internal
+      implementation of OpenPGP. (CNY-1895)
 
 Changes in 2.0.3:
   o Build Changes:
